Finished up most of the research section

--- a/additional.bib
+++ b/additional.bib
@@ -88,3 +88,122 @@ url = {http://dx.doi.org/10.1016/j.intcom.2010.07.003},
 volume = {23},
 year = {2011}
 }
+@article{Werneck2009,
+abstract = {Goal-Oriented Requirements Engineering (GORE) is an approach to requirements engineering dealing with intentionality in accordance with the relations among different actors. KAOS and i* (i-star) frameworks have been receiving many references as being important GORE proposals. This paper presents an conceptual analysis comparing characteristics of those methods giving examples related to actors’ relations definition, goal organizational model, tasks representation, risk analysis, and non-functional requirements. The aim of this work is to show both frameworks benefits and drawbacks. We believe that this analysis helps the understanding of the core concepts of GORE as well as it draws attention to key representation issues for both KAOS and i*.},
+author = {Werneck, Vera Maria Benjamim and Oliveira, Antonio de Padua Albuquerque and Leite, Julio Cesar Sampaio do Prado},
+file = {:Users/tom/Documents/Papers/Comparing GORE Frameworks- i-star and KAOS.pdf:pdf},
+isbn = {978-956-319-941-3},
+journal = {Wer},
+pages = {1--12},
+title = {{Comparing GORE Frameworks: i-star and KAOS}},
+url = {http://wer-papers.googlecode.com/svn-history/r71/trunk/dataset/wer09/WER09{\_}4.pdf},
+year = {2009}
+}
+@article{Almisned2010,
+abstract = {Wigmore’s charts and Bayesian networks are used to represent graphically the construction of arguments and to evaluate them. KAOS is a goal oriented requirements analysis method that enables the analysts to capture requirements through the realization of the business goals. However, KAOS does not have inbuilt mechanism for evaluating these goals and the inferring process. This paper proposes a method for evaluating KAOS models through the extension of Wigmore’s model with features of Bayesian networks.},
+author = {Almisned, Faisal and Keppens, Jeroen},
+doi = {10.4236/jsea.2010.39101},
+file = {:Users/tom/Documents/Papers/Requirements Analysis- Evaluating KaOS Models.pdf:pdf},
+issn = {1945-3116},
+journal = {Journal of Software Engineering and Applications},
+keywords = {bayesian networks,kaos,requirements evaluation,s chart,wigmore},
+number = {09},
+pages = {869--874},
+title = {{Requirements Analysis: Evaluating KAOS Models}},
+volume = {03},
+year = {2010}
+}
+@inproceedings{VanDiggelen2010,
+abstract = {Obligations can apply to individuals, either severally or collectively. When applied severally, each individual or member of a team is independently responsible to fulfill the obligation. When applied collectively, it is the group as a whole that becomes responsible, with individual members sharing the obligation. In this paper, we present several variations of teamwork models involving the performance of collective obligations. Some of these rely heavily on a leader to ensure effective teamwork, whereas others leave much room for member autonomy. We strongly focus on the implementation of such models. We demonstrate how KAoS policies can be used to establish desired forms of cooperation through regulation of agent behavior. Some of these policies concern invariant aspects of teamwork, such as how to behave when a leader is present, how to ensure that actions are properly coordinated, and how to delegate actions. Other policies can be enabled or disabled to regulate the degree of autonomy of the team members. We have implemented a prototype of a Mars-mission scenario that demonstrates varying results when applied across these different teamwork models.},
+author = {{Van Diggelen}, Jurriaan and Bradshaw, Jeffrey M. and Johnson, Matthew and Uszok, Andrzej and Feltovich, Paul J.},
+booktitle = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+doi = {10.1007/978-3-642-14962-7{\_}3},
+isbn = {3642149618},
+issn = {03029743},
+keywords = {Collective obligations,Human-agent teams,Policies},
+number = {M4D},
+pages = {36--52},
+title = {{Implementing collective obligations in human-agent teams using KAoS policies}},
+volume = {6069 LNAI},
+year = {2010}
+}
+@article{Tutorial2007,
+abstract = {The tutorial is structured as follows: Key ideas underlying KAOS. The section introduces KAOS; it gives the main ideas and processes you have to keep in mind to build a successful requirements document with KAOS. Analysis of a case study, where the requirements will be gathered for the design of a new elevator system. The case study will let us show you how the KAOS approach favors the identification of interesting properties and alternative unexpected designs. But you should keep in mind that KAOS can be used for any type of information system. We have been using it for many years in different industries such as steel, mechanics, telecommunication, health care. We also used the KAOS approach for public administrations, ...},
+author = {Tutorial, Kaos},
+doi = {10.1016/j.ijid.2008.03.002},
+issn = {12019712},
+journal = {International journal of infectious diseases IJID official publication of the International Society for Infectious Diseases},
+number = {5},
+pages = {1--46},
+pmid = {18467143},
+title = {{A KAOS Tutorial}},
+url = {http://www.objectiver.com/fileadmin/download/documents/KaosTutorial.pdf},
+volume = {12},
+year = {2007}
+}
+@article{Azzopardi2016a,
+author = {Azzopardi, Leif & Maxwell, David},
+file = {:Users/tom/Documents/Papers/tango-with-django.pdf:pdf},
+title = {{How To Tango With Django 1.7 — How to Tango with Django 1.7}},
+url = {http://www.tangowithdjango.com/book17/index.html},
+year = {2016}
+}
+@book{TerHofstede2010,
+abstract = {Topics covered include: The fundamentals of business process modeling, including workflow patterns, an in-depth treatment of process flexibility, including approaches to dealing with on-the-fly changes, unexpected exceptions, and constraint-based processes, Technological aspects of a modern BPM environment, including its architecture, process design environment, process engine, resource handler and other support services, a comparative insight into current approaches to business process modeling and execution such as BPMN, EPCs, BPEL, jBPM, OpenWFE, and Enhydra Shark, process mining, verification, integration and configuration; and case studies in health care and screen business. This book provides a comprehensive treatment of the field of Business Process Management (BPM) with a focus on Business Process Automation. It achieves this by covering a wide range of topics, both introductory and advanced, illustrated through and grounded in the YAWL (Yet Another Workflow Language) language and corresponding open-source support environment. In doing so it provides the reader with a deep, timeless, and vendor-independent understanding of the essential ingredients of business process automation. The BPM field is in a continual state of flux and is subject to both the ongoing proposal of new standards and the introduction of new tools and technology. Its fundamentals however are relatively stable and this book aims to equip the reader with both a thorough understanding of them and the ability to apply them to better understand, assess and utilize new developments in the BPM field. As a consequence of its topic-based format and the inclusion of a broad range of exercises, the book is eminently suitable for use in tertiary education, both at the undergraduate and the postgraduate level, for students of computer science and information systems. BPM researchers and practitioners will also find it a valuable resource. The book serves as a uniquereference to a varied and comprehensive collection of topics that are relevant to the business process life-cycle.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {{Ter Hofstede}, Arthur H M and {Van Der Aalst}, Wil M P and Adams, Michael and Russell, Nick},
+booktitle = {Modern Business Process Automation: YAWL and its Support Environment},
+doi = {10.1017/CBO9781107415324.004},
+eprint = {arXiv:1011.1669v3},
+file = {:Users/tom/Documents/Papers/Modern Business Process Automation -- YAWL and its Support Environment.pdf:pdf},
+isbn = {9783642031205},
+issn = {19454589},
+keywords = {,Familial longevity,Functional status,Human,IGF-1 axis,Survival},
+number = {11},
+pages = {1--676},
+pmid = {25246403},
+title = {{Modern business process automation: YAWL and its support environment}},
+volume = {7},
+year = {2010}
+}
+@article{Lyytinen2008,
+author = {Lyytinen, Kalle and Newman, Mike},
+doi = {10.1057/ejis.2008.50},
+issn = {0960-085X},
+journal = {European Journal of Information Systems},
+language = {en},
+mendeley-groups = {Dissertation Reading},
+month = {dec},
+number = {6},
+pages = {589--613},
+publisher = {Nature Publishing Group},
+title = {{Explaining information systems change: a punctuated socio-technical change model}},
+url = {http://www.palgrave-journals.com/ejis/journal/v17/n6/abs/ejis200850a.html},
+volume = {17},
+year = {2008}
+}
+@article{Grote2004,
+abstract = {How an organization handles uncertainties stemming from its own production processes and from its environment, is a central characteristic of its functioning. Many organizations, foremost those which have to handle substantial health and safety risks, aim at minimizing uncertainties. This is in contrast with newer organization theory which argues for enabling local competence for coping with uncertainties. Both approaches with their advantages and disadvantages will be discussed and consequences for system design drawn. ?? 2004 Elsevier Ltd. All rights reserved.},
+author = {Grote, Gudela},
+doi = {10.1016/j.arcontrol.2004.03.001},
+file = {:Users/tom/Documents/Papers/Uncertainty Management at the core of System Design.pdf:pdf},
+issn = {13675788},
+journal = {Annual Reviews in Control},
+keywords = {Automation,Function allocation,Safety management,Socio-technical system design,Uncertainty},
+number = {2},
+pages = {267--274},
+title = {{Uncertainty management at the core of system design}},
+volume = {28},
+year = {2004}
+}
+@book{Susman1976,
+author = {Susman, Gerald I.},
+isbn = {0275561402},
+mendeley-groups = {Dissertation Reading},
+pages = {230},
+publisher = {Praeger},
+title = {{Autonomy at Work: A Sociotechnical Analysis of Participative Management}},
+url = {https://books.google.co.uk/books/about/Autonomy{\_}at{\_}Work.html?id=y{\_}qZAAAAIAAJ{\&}pgis=1},
+year = {1976}
+}
