--- a/dissertation.tex
+++ b/dissertation.tex
@@ -14,7 +14,7 @@
 \begin{document}
 \title{Code Fuzzing for Sociotechnical Variance}  % To be changed!
 \author{Tom Wallis}
-\date{\today}
+\date{25th March 2016}
 \maketitle
 
 \include{chapters/Abstract}
