--- a/dissertation.tex
+++ b/dissertation.tex
@@ -9,6 +9,9 @@
 \usepackage{csquotes}
 \usepackage{cleveref}
 \usepackage{enumitem}
+\usepackage{verbments}
+\usepackage[usenames, dvipsnames]{color}
+\newcommand{\todo}[1]{\colorbox{BurntOrange}{\color{White}{\textsc{TODO: #1}}}}
 
 
 \begin{document}
@@ -21,7 +24,6 @@
 
 \educationalconsent
 \tableofcontents
-
 \include{chapters/Introduction}
 \include{chapters/Motivations}
 \include{chapters/Research}
