Updates from ShareLaTeX

--- a/additional.bib
+++ b/additional.bib
@@ -238,3 +238,120 @@ pages = {11},
 title = {{Defense System Software Development Dod-Std-2167}},
 year = {1984}
 }
+@article{Miller1988,
+author = {Miller, Barton P.},
+file = {:Users/tom/Documents/Papers/bart miller original fuzzing paper.pdf:pdf},
+journal = {University of Wisconsin},
+title = {{CS 736 Fall 1988 Project List}},
+url = {http://research.cs.wisc.edu/adsl/Publications/starbox-hotstorage13.pdf},
+year = {1988}
+}
+@misc{Enter95:online,
+author = {},
+title = {Enterprise Overhaul: Resolving DNS | PayPal Engineering Blog},
+howpublished = {\url{https://www.paypal-engineering.com/2015/12/16/enterprise-overhaul-resolving-dns/}},
+month = {},
+year = {},
+note = {(Accessed on 03/23/2016)}
+}
+@misc{GitHu12:online,
+author = {},
+title = {GitHub - miketeo/PyMuTester},
+howpublished = {\url{https://github.com/miketeo/PyMuTester}},
+month = {},
+year = {},
+note = {(Accessed on 03/23/2016)}
+}
+@misc{32.2.7:online,
+author = {},
+title = {32.2. ast — Abstract Syntax Trees — Python 2.7.11 documentation},
+howpublished = {\url{https://docs.python.org/2/library/ast.html}},
+month = {},
+year = {},
+note = {(Accessed on 03/23/2016)}
+}
+@article{Tiu2005,
+author = {Tiu, A.},
+file = {:Users/tom/Documents/Papers/model checking pi calculus.pdf:pdf},
+isbn = {3-540-28309-9},
+journal = {Lecture notes in computer science},
+pages = {36},
+title = {{Model checking for pi-calculus using proof search}},
+url = {http://www.springerlink.com/index/98291nbtf19ytxdp.pdf},
+volume = {3653},
+year = {2005}
+}
+@book{Hutchison2008,
+abstract = {To identify the emergent trends in software-intensive and distributed and decentralized computer systems and their impact on the Information Society in the next 10--15 years, the European Commission has established two Coordinated Actions: Initially the project `Beyond the Horizon' and then, starting in 2006, the project `InterLink'. This state-of-the-art survey presents the results of three workshops of the InterLink working group on software-intensive systems and novel computing paradigms. The objective was to imagine the landscape in which next generations of software-intensive systems will operate and the challenges they present to computing, software engineering, cognition and intelligence. The volume starts with an overview of the current state of the art and the research missions in engineering software-intensive systems. The remainder of the book consists of 15 invited papers of the working group participants and is structured in three major parts: ensemble engineering, theory and formal methods, and novel computing paradigms. These papers cover a broad spectrum of relevant topics ranging from methods, languages and tools for ensemble engineering, socio-technical and cyber-physical systems, ensembles in urban environments, formal methods and mathematical foundations for ensembles, orchestration languages to disruptive paradigms such as molecular and chemical computing.},
+author = {Hutchison, David and Mitchell, John C},
+doi = {10.1007/978-3-540-89437-7},
+file = {:Users/tom/Documents/Papers/Software Intensive Systems and New Computing Paradigms.pdf:pdf},
+isbn = {978-3-540-89436-0, 978-3-540-89437-7},
+issn = {0302-9743},
+pages = {X, 266},
+title = {{Software-Intensive Systems and New Computing Paradigms. Challenges and Visions}},
+url = {http://link.springer.com/10.1007/978-3-540-89437-7$\backslash$nhttp://www.springer.com/978-3-540-89436-0},
+volume = {5380},
+year = {2008}
+}
+@misc{16.2.58:online,
+author = {},
+title = {16.2. threading — Higher-level threading interface — Python 2.7.11 documentation},
+howpublished = {\url{https://docs.python.org/2.7/library/threading.html?highlight=threading#module-threading}},
+month = {},
+year = {},
+note = {(Accessed on 03/25/2016)}
+}
+@ARTICLE{Bohner96softwarechange,
+    author = {Shawn A. Bohner},
+    title = {Software Change Impact Analysis},
+    journal = {},
+    year = {1996}
+}
+@misc{MutPy26:online,
+author = {},
+title = {MutPy 0.4.0 : Python Package Index},
+howpublished = {\url{https://pypi.python.org/pypi/MutPy}},
+month = {},
+year = {},
+note = {(Accessed on 03/25/2016)}
+}
+@misc{PITMu92:online,
+author = {},
+title = {PIT Mutation Testing},
+howpublished = {\url{http://pitest.org/}},
+month = {},
+year = {},
+note = {(Accessed on 03/25/2016)}
+}
+@misc{khala8:online,
+author = {},
+title = {khalas / mutpy / source / — Bitbucket},
+howpublished = {\url{https://bitbucket.org/khalas/mutpy/src}},
+month = {},
+year = {},
+note = {(Accessed on 03/25/2016)}
+}
+@article{Turing1937,
+abstract = {Turing, A. M. "On Computable Numbers with an Application to the Entscheidungsproblem." ,},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Turing, Alan},
+doi = {10.1016/B978-0-12-386980-7.50002-2},
+eprint = {arXiv:1011.1669v3},
+file = {:Users/tom/Documents/Papers/Turing -- Computable Numbers with an application to the entscheidungsproblem.pdf:pdf},
+isbn = {9780123869807},
+issn = {00664138},
+journal = {Proceedings of the London Mathematical Society},
+pmid = {25246403},
+title = {{On Computable Numbers, with an Application to the Entscheidungsproblem - A Correction}},
+year = {1937}
+}
+@misc{4970864:online,
+author = {},
+title = {49708837511\_ftp.pdf;jsessionid=15C412359F0A77F9FD92DD24B703095F.f01t02},
+howpublished = {\url{http://onlinelibrary.wiley.com/store/10.1002/qj.49708837511/asset/49708837511_ftp.pdf;jsessionid=15C412359F0A77F9FD92DD24B703095F.f01t02?v=1&t=im9clifp&s=6bc6cccb372d6b20f66da1bda0c67b9535efb2d4}},
+month = {},
+year = {},
+note = {(Accessed on 03/25/2016)}
+}
