--- a/dissertation.tex
+++ b/dissertation.tex
@@ -12,12 +12,20 @@
 \usepackage{float}
 \usepackage{enumitem}
 \usepackage{verbments}
-\usepackage[usenames, dvipsnames]{color}
+\usepackage[english]{babel}
+\usepackage[sorting=none,backend=bibtex]{biblatex}
+\usepackage[usenames, dvipsnames]{xcolor}
+\usepackage[autostyle, english = american]{csquotes}
+\MakeOuterQuote{"}
 
 \crefformat{section}{§#2#1#3}
 \crefformat{chapter}{§#2#1#3}
 \crefformat{figure}{Figure #2#1#3}
-\newcommand{\todo}[1]{\colorbox{BurntOrange}{\color{White}{\textsc{TODO: #1}}}}
+
+\newcommand{\todo}[1]{\colorbox{BurntOrange}{\color{White}{TODO: \textsc{#1}}}}
+\newcommand{\picalc}{\(\pi\)-calculus }
+
+\bibliography{library,additional}
 
 \begin{document}
 \title{Code Fuzzing for Sociotechnical Variance}  % To be changed!
@@ -26,7 +34,6 @@
 \maketitle
 
 \include{chapters/Abstract}
-
 \educationalconsent
 \tableofcontents
 \include{chapters/Introduction}
@@ -42,7 +49,7 @@
 %
 %\end{appendices}
 
-\bibliographystyle{plain}
-\bibliography{library.bib,additional.bib}
+%\bibliographystyle{plain}
+\printbibliography
 
 \end{document}
