--- a/library.bib
+++ b/library.bib
@@ -239,7 +239,7 @@ issn = {03029743},
 journal = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
 number = {c},
 pages = {99--121},
-title = {{Social modeling and i*}},
+title = {{Social modelling and i*}},
 volume = {5600 LNCS},
 year = {2009}
 }
